style.css
body {
  background-color: rgb(255, 255, 255);
  background-size: contain;
  background-position-y: 100px;
  background-repeat: no-repeat;
  margin: 0%;
}

.imgBackground img {
  width: 105%;
  height: 100%;
  z-index: -10;
  position: absolute;
  margin: -9% 0% 0% -50%;
}

.container ul {
  list-style: none;
  align-items: center;
  padding-left: 0%;
  margin: 20px;
  display: flex;
  justify-content: space-between;
}

.bar {
  margin: 0;
  padding: 0;
}

.container h2 {
  font-style: normal;
  font-family: 'Inter', sans-serif;
  font-weight: 600;
  font-size: 1.25rem;
  line-height: 28px;
  text-align: center;
}

.textcenter {
  padding: 0% 24px;
}

.tittleContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-image: url(/header-illsutration-mobile@2x.svg);
  background-repeat: no-repeat;
  height: 100vh;
  background-position: center center;
  background-size: cover;
  justify-content: center;
}

.tittleContainer p {
  text-align: center;
  font-family: 'Inter', sans-serif;
  font-weight: 400;
  font-size: 1.25rem;
  line-height: 28px;
}

.tittleContainer h1 {
  text-align: center;
  font-size: 2.5rem;
  font-style: normal;
  font-family: 'Inter', sans-serif;
  line-height: 52px;
}

.mediaContainer {
  list-style: none;
  width: 80%;
  padding: 0;
  display: flex;
  justify-content: space-evenly;
  align-items: baseline;
}

.mediaIcon {
  transition: transform 0.2s;
}

.mediaIcon:hover {
  transform: scale(1.5);
}

.welcome {
  font-family: 'Inter', sans-serif;
  color: #172b4d;
  font-weight: 700;
  transition: transform 0.2s;
}

.welcome:hover {
  transform: scale(1.5);
}

.description {
  color: #118552gi;
  font-family: 'Inter', sans-serif;
  font-weight: 400;
}

.arrowDown {
  margin-left: auto;
  margin-right: auto;
  display: block;
  width: 10%;
  margin-top: 64px;
}

.myRecentWork {
  margin: 22px;
  display: grid;
  gap: 24px;
  justify-items: center;
}

.cardGrid {
  display: grid;
  gap: 24px;
}

.titleWorkBlue {
  font-family: "inter", sans-serif;
  font-size: 2.5rem;
  color: #172b4d;
  font-weight: 700;
}

.titleWorkBlue:hover {
  transform: rotate(0.5rad);
}

.post {
  border: solid 1px #d0d9d4;
  background-color: #ebf0ee;
  border-radius: 10px;
  display: flex;
  flex-direction: column-reverse;
  align-items: flex-end;
  height: 474px;
}

.cardInformation {
  border-radius: 10px;
  background-color: white;
  max-height: 50%;
  padding: 16px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: "inter", sans-serif;
  color: #3a4a42;
}

.cardInformation ul {
  list-style: none;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;
  flex-wrap: wrap;
}

.myRecentWorkItem {
  background-color: #ebf0ee;
  border-radius: 4px;
  padding: 8px 12px;
  text-align: center;
  font-family: 'Inter', sans-serif;
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 16px;
  width: max-content;
}

.buttongreen {
  background-color: #36b37e;
  width: 122px;
  height: 48px;
  border: none;
  border-radius: 4px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-size: 1.06rem;
  font-weight: 500;
  line-height: 24px;
  color: white;
  text-align: center;
}

.buttongreen:hover {
  transform: scale(1.2);
  background-color: red;
  transition: background-color 0.2s;
}

.button:hover {
  transform: scale(1.2);
}

.containerAboutMe {
  background-image: url(./illustration\ 2-about\ me\ mobile.svg);
  background-repeat: no-repeat;
  background-position-y: bottom;
  padding-bottom: 15px;
  color: #172b4d;
  font-family: "Inter", sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.containerAboutMe p {
  margin: 0% 5% 5% 5%;
  text-align: center;
  line-height: 32px;
  font-size: 1.25rem;
}

.buttonResume {
  background-color: #36b37e;
  size: 17px;
  width: 159px;
  height: 48px;
  border: none;
  border-radius: 4px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-size: 1.06rem;
  font-weight: 500;
  line-height: 24px;
  color: white;
  text-align: center;
}

.buttonResume:hover {
  transform: scale(1.3);
  background-color: red;
  transition: background-color 0.2s;
}

.aboutMe {
  display: grid;
  grid-template-columns: 3;
  grid-template-rows: auto;
  gap: 24px;
  justify-items: center;
  align-items: center;
  background-image: url("images/illustration-\ about\ me-\ mobile.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.aboutMeCard {
  padding-bottom: 11px;
  margin-bottom: 5%;
  border: solid 1px #d0d9d4;
  background-color: #ebf0ee;
  border-radius: 10px 10px 10px 10px;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 327px;
  width: 325px;
}

.aboutMeCard img {
  height: 50px;
  width: 50px;
  background-color: white;
  padding: 15px;
  border-radius: 50%;
  margin-bottom: 60px;
}

.aboutMeCard ul {
  list-style: none;
  padding: 0;
  margin: 0 10px;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 8px;
}

.aboutMeListItem {
  background-color: white;
  color: #36b37e;
  border-radius: 4px;
  padding: 8px 12px;
  text-align: center;
  font-family: 'Inter', sans-serif;
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 16px;
}

.blueTitle {
  font-size: 2.5rem;
  font-weight: 700;
}

.green {
  color: #36b37e;
}

.skillsItem {
  padding-top: 40px;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.postOne {
  border-radius: 10px;
  display: flex;
  flex-direction: column-reverse;
  align-items: flex-end;
}

.cardGridOne {
  display: grid;
  gap: 24px;
}

.separator {
  background-color: #36b37f;
  width: 55px;
  height: 6px;
  margin: none;
  border: none;
  border-radius: 10px;
}

.svgImage {
  position: absolute;
  right: 0;
}

.svgImage:hover {
  transform: translate(-2.1rem, -2ex);
}

.subtitle {
  text-align: center;
  font-size: 1.5rem;
  font-weight: 600;
  font-family: "inter", sans-serif;
  color: #3a4a42;
}

.containerThirdTittle {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.ThirdTittle {
  align-items: center;
  text-align: center;
  margin: 5% 5% 5% 5%;
  font-family: 'Inter', sans-serif;
  font-weight: 700;
  line-height: 52px;
  color: #172b4d;
  width: 20.4rem;
  height: 22.6rem;
}

.finishForm {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  gap: 24px;
  justify-content: center;
  margin: 10% 5% 5% 5%;
}

.inputText {
  text-indent: 7px;
  font-family: 'Inter', sans-serif;
  font-weight: 400;
  height: 48px;
  border-radius: 4px;
  border: 1px solid #d0d9d4;
}

.inputEmail {
  text-indent: 7px;
  font-weight: 400;
  font-family: 'Inter', sans-serif;
  height: 48px;
  border-radius: 4px;
  border: 1px solid #d0d9d4;
}

.finalTextarea {
  text-indent: 7px;
  border: 1px solid #60c095;
  box-sizing: border-box;
  border-radius: 4px;
  font-family: 'Inter', sans-serif;
  font-weight: 400;
  font-size: 0.9rem;
}

.finalTextarea::-webkit-resizer {
  background-image: url(./textareaHandle.svg);
  background-repeat: no-repeat;
  background-size: 13px 13px;
  background-position: center;
}

.finalButton {
  align-self: center;
  background-color: #36b37e;
  size: 17px;
  width: 129px;
  height: 48px;
  border: none;
  border-radius: 4px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-size: 1rem;
  font-weight: 500;
  line-height: 24px;
  color: white;
  text-align: center;
}

.finalButton:hover {
  background-color: red;
  transition: background-color 0.2s;
}

.finalSection {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  margin: 2%;
}

.finalContainer {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  list-style: none;
  width: 80%;
  padding: 0;
  justify-content: space-evenly;
}

.finalList {
  list-style: none;
  display: list-item;
  align-items: baseline;
}

.finalEmail {
  color: #42526e;
  height: 189px;
  font-family: 'Inter', sans-serif;
  font-weight: 400px;
  font-size: 1.2rem;
  text-align: center;
  line-height: 32px;
  margin-top: 0%;
}

.finalSeparador {
  width: 130px;
  height: 5px;
  background-color: #3a4a42;
  border: none;
  border-radius: 10px;
}

.containerDesktopUl {
  display: flex;
  justify-content: center;
}

.unlistbar {
  color: #172b4d;
  font-family: 'Inter', sans-serif;
  display: flex;
  justify-content: space-between;
  list-style: none;
  width: 17rem;
  padding: 0;
}

/*
tablet
*/
@media (min-width: 768px) {
  .container,
  header {
    display: none;
  }

  .containerDesk {
    display: flex;
    justify-content: center;
    align-items: baseline;
  }

  .tittleContainer {
    margin-top: 0%;
    font-family: 'Inter', sans-serif;
    background-image: url(/imgdesktopversion/Header-llustration-desktop.svg);
  }

  .imgOneMovil {
    display: none;
  }

  .welcome {
    padding: 0 20px;
  }

  .tittleContainer p {
    padding: 0 70px;
    margin-top: 0;
  }

  .mediaContainer {
    width: 29%;
  }

  .cardGrid {
    grid-template-columns: repeat(3, 1fr);
  }

  .cardGridOne {
    grid-template-columns: repeat(3, 1fr);
  }

  .skillsItem {
    margin: 22px;
    display: grid;
    gap: 24px;
    justify-items: center;
  }

  .aboutMeCard {
    grid-template-columns: repeat(3, 1fr);
    padding-bottom: 11px;
    margin-bottom: 5%;
    border: solid 1px #d0d9d4;
    background-color: #ebf0ee;
    border-radius: 10px 10px 10px 10px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100%;
  }

  .containerThirdTittleForm {
    margin: 24px;
  }

  .formThirdTittle {
    display: grid;
    margin: 0 140px;
    margin: 5% 5% 5% 10%;
    grid-template-columns: 2fr 3fr;
  }

  .formThirdTittle > h2 {
    align-self: center;
    min-width: -webkit-fill-available;
    padding-top: 25%;
  }

  .inputText,
  .inputTextLast {
    box-sizing: border-box;
    width: 100%;
    grid-column: span 1;
    border: 1px solid #d0d9d4;
    text-indent: 6px;
  }

  .inputEmail {
    box-sizing: border-box;
    width: 100%;
    grid-column: span 2;
  }

  .finalTextarea {
    box-sizing: border-box;
    width: 100%;
    grid-column: span 2;
  }

  .containerThirdTittle {
    place-self: center;
    width: 400%;
    height: 200%;
    margin: 0%;
  }

  .finalButton {
    align-self: self-start;
  }

  .finishForm {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  .finalEmail {
    display: none;
  }

  .finalContainer {
    width: 30%;
  }

  .finalSeparador {
    display: none;
  }

  .pilarRight {
    position: absolute;
    right: -21px;
    z-index: -1;
    width: 21%;
    height: 34%;
    align-self: center;
  }

  .cubeFinalLeft {
    position: absolute;
    left: 0;
    z-index: -2;
    width: 17%;
    align-self: center;
    height: 341px;
  }
}

/*
tablet
*/
@media (max-width: 767px) {
  .containerDesk {
    display: none;
  }

  .imgTwoDesk {
    display: none;
  }

  .inputTextLast {
    display: none;
  }

  .pilarRight {
    display: none;
  }

  .cubeFinalLeft {
    display: none;
  }

  .ThirdTittle {
    align-items: center;
    width: fit-content;
    line-height: 3;
  }
}

